modified about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p> This site is created by Jishnu. It uses data from weatherstack api and mapbox Api.</p>
         <img class ="portrait" src="/img/my.jpg">
 
         </div>
